--- a/Maquina de Venda/index.html
+++ b/Maquina de Venda/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Monoton|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
     <title>Máquina de Venda</title>
 </head>
@@ -26,24 +26,24 @@
                 </div>
                 <div>
 
-                    <button class="btnCoin" type="button" value="1" id="Penny">$ 0,1</button>
-                    <button class="btnCoin" type="button" value="5" id="Nickel">$ 0,5</button>
-                    <button class="btnCoin" type="button" value="10" id="Dime">$ 0,10</button>
-                    <button class="btnCoin" type="button" value="25" id="Quarter">$ 0,25</button>
-                    <button class="btnCoin" type="button" value="50" id="HalfDollarCoin">$ 0,50</button>
+                    <button class="btnCoin" type="button" id="Penny">$ 0,1</button>
+                    <button class="btnCoin" type="button" id="Nickel">$ 0,5</button>
+                    <button class="btnCoin" type="button" id="Dime">$ 0,10</button>
+                    <button class="btnCoin" type="button" id="Quarter">$ 0,25</button>
+                    <button class="btnCoin" type="button" id="HalfDollarCoin">$ 0,50</button>
                 </div>
             </form>
             <br>
             <div id="bodyMachine">
                 <div id="out">
-                    <div id="janela1">
+                    <div id="door1">
                         <span>RETIRE AQUI</span>
                     </div>
-                    <div id="janela2"><img width="100" height="150" src="img/coke.png" alt="coca"></div>
+                    <div id="door2"><img id="lata" width="100" height="150" src="img/coke.png" alt="coca"><span id="message">Obrigado!</span> </div>
                 </div>
                 <footer>
                     <span id="price">
-                    45 CENTS
+                        45 CENTS
 
                     </span>
                 </footer>
